syntax = "proto2";

package org.yupana;

message Request {
    oneof req {
        Ping ping = 2;
        SqlQuery sqlQuery = 3;
        BatchSqlQuery batchSqlQuery = 4;
    }
}

message Ping {
    required uint64 reqTime = 1;
    optional Version version = 2;
}

message Version {
    required int32 protocol = 1;
    required int32 major = 2;
    required int32 minor = 3;
    required string version = 4;
}

message SqlQuery {
    required string sql = 1;
    repeated ParameterValue parameters = 2;
}

message BatchSqlQuery {
    required string sql = 1;
    repeated ParameterValues batch = 2;
}

message ParameterValues {
    repeated ParameterValue parameters = 1;
}

message ParameterValue {
    required int32 index = 1;
    required Value value = 2;
}

message Value {
    oneof value {
        string textValue = 4;
        string decimalValue = 5;
        uint64 timeValue = 6;
        StringArray stringArrayValue = 7;
        DecimalArray decimalArrayValue = 8;
        TimeArray timeArrayValue = 9;
    }
}

message StringArray {
    repeated string values = 1;
}

message DecimalArray {
    repeated string values = 1;
}

message TimeArray {
    repeated uint64 values = 1;
}

message ResultChunk {
    repeated bytes values = 1;
}

message ResultHeader {
    repeated ResultField fields = 1;
    optional string tableName = 2;
}

message ResultField {
    required string name = 1;
    required string type = 2;
}

message ResultStatistics {
    required int32 seconds = 1;
    required int32 rowCount = 2;
}

message Response {
    oneof resp {
        ResultHeader resultHeader = 1;
        ResultChunk result = 2;
        string heartbeat = 3;
        string error = 4;
        Pong pong = 5;
        ResultStatistics resultStatistics = 6;
    }
}

message Pong {
    required uint64 reqTime = 1;
    required uint64 respTime = 2;
    optional Version version = 3;
}
